Fix: Contact Us section alignments & overflow.

--- a/style.css
+++ b/style.css
@@ -22,7 +22,6 @@
 #contact h2 {
   font-size: 3.5rem;
   text-align: center;
-  margin-bottom: 80px;
   color: white;
   font-weight: bold;
   text-transform: uppercase;
